# git-branch-cleaner

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/cleaner/: __main__.py  git_repo_cleaner.py
src/git_branch_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
